<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">KisTalk</string>
	<string name="upload_photo">Camera</string>
	<string name="choose_picture">Choose</string>
	<string name="empty">No items</string>
	<string name="refresh">Refresh</string>
	<string name="comments">&#160;comments</string>
	<string name="upload_type_comment">Type your comment here: </string>
	<string name="upload_send_button">Send</string>
	<string name="comment">Comment</string>
	<string name="KTH_ID">KTH-ID</string>
	<string name="login_header">Login to KisTalk</string>
	<string name="login_description">In order to use KisTalk for Android you\'ll first
		need to sign in at the website (www.KisTalk.com) and accept our
		license. Then you\'ll find the QR code under \'Profile\' and \'Login
		token for Android\'</string>
	<string name="login_label_username">Username (KTH.se account)</string>
	<string name="login_label_token">Token</string>
	<string name="login_button_scan_with_qr">Scan QR code</string>
	<string name="login_button_login">Login</string>
	<string name="login_description_optional">If you don\'t have a QR reader installed you can write username and token manually</string>
	<string name="load_more_images">Load more images</string>
	<string name="upload">Upload</string>
</resources>
