<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@android:color/background_dark">
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/login_view" android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView android:paddingBottom="10dip" android:id="@+id/textView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:textAppearance="@style/Header_Large" android:text="@string/login_header"></TextView>
		<TextView android:paddingBottom="10dip" android:id="@+id/textView5"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/login_description"></TextView>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/relativeLayout1"
			android:gravity="center_horizontal">
			<Button android:layout_width="wrap_content" style="@style/SubmitButtonStyle"
				android:id="@+id/login_button_scan_qr" android:layout_height="wrap_content"
				android:text="@string/login_button_scan_with_qr" android:background="@drawable/submit_button_shape"></Button>
		</RelativeLayout>
		<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/login_description_optional"
			android:paddingTop="10dip"></TextView>
		<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="@style/Header_Medium"
			android:text="@string/login_label_username" android:paddingTop="10dip"></TextView>
		<EditText android:text="" android:layout_width="fill_parent"
			android:id="@+id/login_inputbox_username" android:layout_height="wrap_content"></EditText>
		<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="@style/Header_Medium"
			android:text="@string/login_label_token" android:paddingTop="10dip"></TextView>
		<EditText android:text="" android:layout_width="fill_parent"
			android:id="@+id/login_inputbox_token" android:layout_height="wrap_content"></EditText>
		<RelativeLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/relativeLayout2"
			android:gravity="center_horizontal" android:paddingTop="10dip">
			<Button android:layout_width="wrap_content" style="@style/SubmitButtonStyle"
				android:id="@+id/login_button_login" android:layout_height="wrap_content"
				android:text="@string/login_button_login" android:background="@drawable/submit_button_shape"></Button>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>



